Fix folder mirror eviction when UIDVALIDITY changes or large batches are removed.
Clear non-cascading message references before deleting mirrored rows, flush UID batches correctly after 100 items, and scope removals by folder so sync recovery works against existing databases.

Co-authored-by: Cursor <cursoragent@cursor.com>